DEX-27229 | fix: alignment issue

--- a/_src-lp/blocks/banner-with-dropdown/banner-with-dropdown.scss
+++ b/_src-lp/blocks/banner-with-dropdown/banner-with-dropdown.scss
@@ -1138,7 +1138,7 @@
   }
 
   .section.banner-with-dropdown-container .banner-with-dropdown > div > div .prices_box {
-    justify-items: center;
+    justify-items: unset;
   }
 }
 
